reconfigure button styling, deployed honeypot status chart added

--- a/front-end/src/app/modules/dashboard/hader-components/node-details/node-details.component.html
+++ b/front-end/src/app/modules/dashboard/hader-components/node-details/node-details.component.html
@@ -5,7 +5,7 @@
       <label class="colo p-3 float-left" ><h1><b>Node Details</b></h1></label>
     </div>
     <div class="col-7">
-      <div class=" p-3 float-right " [hidden]="isShowDiv" ><h2><b  class="colo">Total Nodes:</b> <span style =  "color: black">;{{total_nodes}}</span></h2></div>
+      <div class=" p-3 float-right " [hidden]="isShowDiv" ><h2><b  class="colo">Total Nodes:</b> <span style =  "color: black">{{total_nodes}}</span></h2></div>
       <h2 class="colo pt-2 float-right mr-4 poin"><b><span>Download CSV : &nbsp;     <img class="iconn" src="{{assetPath}}/images_and_logos/csvpic.png" alt="" title="Download CSV"
         (click)="generateCsv()" height="40" width="40"> </span></b></h2>
  
