--- a/front-end/src/app/modules/dashboard/hader-components/honeypot-repo/hp-config/hp-config.component.scss
+++ b/front-end/src/app/modules/dashboard/hader-components/honeypot-repo/hp-config/hp-config.component.scss
@@ -71,7 +71,7 @@
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
   }
   .formbold-form-label {
-    color: #fff;
+    color: black;
     font-size: 14px;
     line-height: 24px;
     display: block;
