--- a/front-end/src/app/modules/dashboard/hader-components/honeypot-details/honeypot-details.component.html
+++ b/front-end/src/app/modules/dashboard/hader-components/honeypot-details/honeypot-details.component.html
@@ -9,7 +9,7 @@
       <label class="colo p-3 float-left" ><h1><b>Honeypot Details</b></h1></label>
     </div>
     <div class="col-6">
-      <div class=" p-3 float-right " [hidden]="isShowDiv" ><h2><b  class="colo">Total Nodes:</b><span style="color: black;"> {{total_nodes}}</span></h2></div>
+      <div class=" p-3 float-right " [hidden]="isShowDiv" ><h2><b  class="colo">Total Honeypots:</b><span style="color: black;"> {{total_nodes}}</span></h2></div>
  
     </div>
     <div class="col-12">
