--- a/front-end/src/app/modules/share/add-user/add-user.component.scss
+++ b/front-end/src/app/modules/share/add-user/add-user.component.scss
@@ -35,7 +35,7 @@ input,select{
   
 }
 ::ng-deep .sele1 .mat-form-field-flex {
-  background-color: black;
+  background-color: #fff;
   height:35px;
   width: 100%;
 
