--- a/front-end/src/app/recover-password/recover-password.component.html
+++ b/front-end/src/app/recover-password/recover-password.component.html
@@ -4,9 +4,9 @@
     <div class="outboxx">
     <div class="center-box ">
         <div class="row text-center mb-2">
-            <div class="col-md-5 mt-2" > 
+            <div class="col-md-3 mt-2" > 
                 <img class="mt-1" src="{{assetPath}}/images_and_logos/cdac_logo.png" alt="C-DAC Mohali" height="70px" width="75px">
-                <img  class="mt-1" src="{{assetPath}}/images_and_logos/ctmslogo1.png" alt="C-DAC Mohali" height="70px" width="75px">
+                <!-- <img  class="mt-1" src="{{assetPath}}/images_and_logos/ctmslogo1.png" alt="C-DAC Mohali" height="70px" width="75px"> -->
                </div>
              <div class="col-md-7 mt-2 logo">
                <img src="{{assetPath}}/images_and_logos/newlogo.png" alt="C-DAC Mohali" height="70px" width="245px">
