--- a/front-end/src/app/modules/dashboard/hader-components/honeypot-repo/hp-blueprint/hp-blueprint.component.scss
+++ b/front-end/src/app/modules/dashboard/hader-components/honeypot-repo/hp-blueprint/hp-blueprint.component.scss
@@ -77,8 +77,9 @@
   }
   
   .formbold-form-label {
-    color: #fff;
-    font-size: 14px;
+    font: bold;
+    color: black;
+    font-size: 18px;
     line-height: 24px;
     display: block;
     // margin-bottom: 10px;
