--- a/front-end/src/app/modules/share/deployed-honeypots/deployed-honeypots.component.scss
+++ b/front-end/src/app/modules/share/deployed-honeypots/deployed-honeypots.component.scss
@@ -55,7 +55,7 @@
     width: auto;
     font-size: 13px;
     border: 1px solid $ylwclr;
-    // background-color: $ylwclr;
+    background: greenyellow;
     color: black;
     box-shadow: inset -3px -3px 5px rgb(0 0 0 / 45%), inset 3px 3px 5px rgb(86 112 239 / 30%);
   }
