--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -75,9 +75,9 @@
 
 </div>
    </div>
-   <img class="g20image" src="{{assetPath}}/images_and_logos/emblem.png" alt="C-DAC Mohali" height="130px" width="100px">
+   <!-- <img class="g20image" src="{{assetPath}}/images_and_logos/emblem.png" alt="C-DAC Mohali" height="130px" width="100px">
    <img class="g20image" src="{{assetPath}}/images_and_logos/g20.png" alt="C-DAC Mohali" height="150px" width="280px">
-   <img class="g20image" src="{{assetPath}}/images_and_logos/Aazadi.webp" alt="C-DAC Mohali" height="110px" width="200px">
+   <img class="g20image" src="{{assetPath}}/images_and_logos/Aazadi.webp" alt="C-DAC Mohali" height="110px" width="200px"> -->
 
 <!-- <app-footer class="fixed-bottom"></app-footer> -->
 </div>
