--- a/front-end/src/app/modules/dashboard/header/header.component.html
+++ b/front-end/src/app/modules/dashboard/header/header.component.html
@@ -127,7 +127,7 @@
                 </div>
             </li>
             <li class="nav-item active">
-                <a class="nav-link"  href="http://192.168.8.1:4200/"  target="_blank"><i class="fa fa-laptop colo1" aria-hidden="true"></i>&nbsp;ADAR<span class="sr-only">(current)</span></a>
+                <a class="nav-link"  href={{adar}}  target="_blank"><i class="fa fa-laptop colo1" aria-hidden="true"></i>&nbsp;ADAR<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
                 <!-- <a class="nav-link" href="http://112.196.121.16:4200/" target="_blank" ><i class="fa fa-cloud colo1" aria-hidden="true"></i>&nbsp;Enumeration<span class="sr-only">(current)</span></a> -->
