--- a/front-end/src/app/modules/dashboard/header/header.component.html
+++ b/front-end/src/app/modules/dashboard/header/header.component.html
@@ -126,12 +126,9 @@
                             class="fa fa-binoculars icon-col"></i>&nbsp;Search By Indicator</a>
                 </div>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link"  href={{adar}}  target="_blank"><i class="fa fa-laptop colo1" aria-hidden="true"></i>&nbsp;ADAR<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <!-- <a class="nav-link" href="http://112.196.121.16:4200/" target="_blank" ><i class="fa fa-cloud colo1" aria-hidden="true"></i>&nbsp;Enumeration<span class="sr-only">(current)</span></a> -->
-            </li>
+            
+        
+            
 
              <!--  -->
         <li class="nav-item dropdown">
@@ -158,7 +155,34 @@
 
             </div>
         </li>
-        
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false"
+                [ngClass]="{'nav-item-active': ((currentComponent  == 'adar') || (currentComponent  == 'enum'))}">
+                <i class="fa fa-bar-chart colo1" aria-hidden="true"></i> Other Dashboards
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" target="_blank" [ngClass]="{'nav-item-active': currentComponent  == 'enum'}"
+                href={{enum}}><i
+                   class="fa fa-laptop icon-col"></i>&nbsp;Enumeration Engine</a>
+           <div class="dropdown-divider"></div>
+           <a class="dropdown-item" target="_blank" [ngClass]="{'nav-item-active': currentComponent  == 'ews'}"
+           href={{ews}}><i
+              class="fa fa-laptop icon-col"></i>&nbsp;EWS</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" target="_blank" [ngClass]="{'nav-item-active': currentComponent  == 'pae'}"
+      href={{pae}}><i
+         class="fa fa-laptop icon-col"></i>&nbsp;PAE</a>
+ <div class="dropdown-divider"></div>
+                <a class="dropdown-item" target="_blank" [ngClass]="{'nav-item-active': currentComponent  == 'adar'}"
+                     href={{adar}}><i
+                        class="fa fa-laptop icon-col"></i>&nbsp;ADAR</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" [ngClass]="{'nav-item-active': currentComponent  == 'ir'}"
+                    (click)="navigation('searchIndicator')" href={{ir}}><i
+                        class="fa fa-binoculars icon-col"></i>&nbsp;IR</a>
+            </div>
+        </li>
         <!--  -->
         </ul>
 
