--- a/front-end/src/app/modules/dashboard/header/header.component.html
+++ b/front-end/src/app/modules/dashboard/header/header.component.html
@@ -168,19 +168,19 @@
            <div class="dropdown-divider"></div>
            <a class="dropdown-item" target="_blank" [ngClass]="{'nav-item-active': currentComponent  == 'ews'}"
            href={{ews}}><i
-              class="fa fa-laptop icon-col"></i>&nbsp;EWS</a>
+              class="fa fa-exclamation-triangle icon-col"></i>&nbsp;EWS</a>
       <div class="dropdown-divider"></div>
       <a class="dropdown-item" target="_blank" [ngClass]="{'nav-item-active': currentComponent  == 'pae'}"
       href={{pae}}><i
-         class="fa fa-laptop icon-col"></i>&nbsp;PAE</a>
+         class="fa fa-list-alt icon-col"></i>&nbsp;PAE</a>
  <div class="dropdown-divider"></div>
                 <a class="dropdown-item" target="_blank" [ngClass]="{'nav-item-active': currentComponent  == 'adar'}"
                      href={{adar}}><i
-                        class="fa fa-laptop icon-col"></i>&nbsp;ADAR</a>
+                        class="fa fa-tasks icon-col"></i>&nbsp;ADAR</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" [ngClass]="{'nav-item-active': currentComponent  == 'ir'}"
                     (click)="navigation('searchIndicator')" href={{ir}}><i
-                        class="fa fa-binoculars icon-col"></i>&nbsp;IR</a>
+                        class="fa fa-flickr icon-col"></i>&nbsp;IR</a>
             </div>
         </li>
         <!--  -->
