update right click

--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="main-design text-center" >
+<div class="main-design text-center" (contextmenu)="onRightClick($event)">
    
    <div class="outboxx">
     <div class="center-box ">
