--- a/front-end/src/app/recover-password/recover-password.component.html
+++ b/front-end/src/app/recover-password/recover-password.component.html
@@ -1,5 +1,5 @@
 
-<div class="main-design text-center" >
+<div class="main-design text-center"   (contextmenu)="onRightClick($event)">
   
     <div class="outboxx">
     <div class="center-box ">
