update ips page

--- a/front-end/src/app/footer/footer.component.html
+++ b/front-end/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" id="footer" style="height:46px;" >
+<div class="container-fluid" id="footer" style="height:46px;"  (contextmenu)="onRightClick($event)" >
     <div class="text-center">
     <p style="color:#000000; padding-top:10px; "><span> <img  src="{{assetPath}}/images_and_logos/cdac_logo.png" alt="C-DAC Mohali" height="27px" width="27px"></span>&nbsp;&nbsp;Designed & Developed by C-DAC, Mohali <span style="color:black;"> 2022-2024. </span> All Rights Reserved.</p>
     </div>
