--- a/front-end/src/app/forget-password/forget-password.component.html
+++ b/front-end/src/app/forget-password/forget-password.component.html
@@ -1,4 +1,4 @@
-<div class="mainn">
+<div class="mainn"   (contextmenu)="onRightClick($event)">
    
     <div class="text-center container-fluid">
         <div class="row">
