--- a/front-end/src/app/modules/dashboard/dashboard.component.html
+++ b/front-end/src/app/modules/dashboard/dashboard.component.html
@@ -1,7 +1,6 @@
-<div class="background-color">
+<div class="background-color"  (contextmenu)="onRightClick($event)">
         <app-header></app-header>
         <app-chips></app-chips>
         <app-attack-mark-map *ngIf="userType !== 'user'"></app-attack-mark-map>
         <app-parent-chart></app-parent-chart>
-   
 </div>
