--- a/front-end/src/app/modules/dashboard/india-ips/india-ips.component.html
+++ b/front-end/src/app/modules/dashboard/india-ips/india-ips.component.html
@@ -1,4 +1,4 @@
-<section class="header-design">
+<section class="header-design"  (contextmenu)="onRightClick($event)">
     <app-header></app-header>
     <div class="panel-body">
         <div class="row">
