right click disabled

--- a/front-end/src/app/modules/dashboard/hader-components/honeypot-repo/hp-blueprint/hp-blueprint.component.html
+++ b/front-end/src/app/modules/dashboard/hader-components/honeypot-repo/hp-blueprint/hp-blueprint.component.html
@@ -1,3 +1,4 @@
+<section (contextmenu)="onRightClick($event)">
 <div *ngIf="isLoading" class="loading-overlay">
     <div class="loading-spinner"></div>
   </div>
@@ -444,4 +445,5 @@
             </form>
         </div>
     </div>
+</section>
 </section>
