--- a/front-end/src/app/modules/dashboard/hader-components/honeypot-repo/hp-config/hp-config.component.html
+++ b/front-end/src/app/modules/dashboard/hader-components/honeypot-repo/hp-config/hp-config.component.html
@@ -1,4 +1,4 @@
-<section>
+<section (contextmenu)="onRightClick($event)">
     <app-header></app-header>
     <div class="formbold-main-wrapper">
         <div class="formbold-form-wrapper">
