--- a/front-end/src/app/modules/dashboard/hader-components/honeypot-repo/hp-stats/hp-stats.component.html
+++ b/front-end/src/app/modules/dashboard/hader-components/honeypot-repo/hp-stats/hp-stats.component.html
@@ -1,5 +1,6 @@
+<section class="content" (contextmenu)="onRightClick($event)">
+
 <app-header></app-header>
-<section class="content">
     
     <div class="flex-container">
         <div class="flex-item">
