--- a/front-end/src/app/modules/dashboard/hader-components/node-details/node-details.component.html
+++ b/front-end/src/app/modules/dashboard/hader-components/node-details/node-details.component.html
@@ -1,3 +1,4 @@
+<section (contextmenu)="onRightClick($event)">
 <app-header></app-header>
 <div class=" container-fluid mb-1">
   <div class="row gg">
@@ -279,3 +280,4 @@
 </table>
 
 </div>
+</section>
