--- a/front-end/src/app/modules/dashboard/hader-components/node-management/heat-map.component.html
+++ b/front-end/src/app/modules/dashboard/hader-components/node-management/heat-map.component.html
@@ -1,3 +1,4 @@
+<section (contextmenu)="onRightClick($event)">
 <div class="modal fade" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
   aria-hidden="true">
   <div class="modal-dialog modal-xl ccc" role="document">
@@ -296,4 +297,5 @@
 </div>
   <br>
   <br>
+</section>
 </section>
