--- a/front-end/src/app/modules/dashboard/hader-components/search/search-by-criteria/search-by-criteria.component.html
+++ b/front-end/src/app/modules/dashboard/hader-components/search/search-by-criteria/search-by-criteria.component.html
@@ -1,4 +1,4 @@
-<section class="header-design">
+<section class="header-design" (contextmenu)="onRightClick($event)">
     <app-header></app-header>
     <div class="col-lg-12 ">
         <div class="panel">
