--- a/front-end/src/app/modules/dashboard/hader-components/user-session/user-session.component.html
+++ b/front-end/src/app/modules/dashboard/hader-components/user-session/user-session.component.html
@@ -1,4 +1,4 @@
-<section class="header-design">
+<section class="header-design" (contextmenu)="onRightClick($event)">
     <app-header></app-header>
     <div class=" container-fluid">
         <label class="p-1 colo"><h1><b>User Session Logs</b></h1></label>
