--- a/front-end/src/app/modules/share/changepassword/changepassword.component.html
+++ b/front-end/src/app/modules/share/changepassword/changepassword.component.html
@@ -1,4 +1,4 @@
-<div class="main-design text-center">
+<div class="main-design text-center" (contextmenu)="onRightClick($event)">
     <div class="row">
         <div class="col-md-9">
             <h2 class=" text-left  mb-0">
