--- a/front-end/src/app/notification/notification.component.html
+++ b/front-end/src/app/notification/notification.component.html
@@ -1,4 +1,4 @@
-<section class="header-design">
+<section class="header-design" (contextmenu)="onRightClick($event)">
     <app-header [countData]="noificationData"></app-header>
     <div class="row background">
         <div class="col-sm-12">
