--- a/front-end/src/app/pagenotfound/pagenotfound.component.html
+++ b/front-end/src/app/pagenotfound/pagenotfound.component.html
@@ -1,4 +1,4 @@
-<body class="bg-purple">
+<body class="bg-purple" (contextmenu)="onRightClick($event)">
 
     <div class="stars">
         <div class="custom-navbar">
