--- a/front-end/src/app/modules/dashboard/hader-components/report-download/report-download.component.html
+++ b/front-end/src/app/modules/dashboard/hader-components/report-download/report-download.component.html
@@ -1,4 +1,4 @@
-<section class="header-design">
+<section class="header-design" (contextmenu)="onRightClick($event)">
     <app-header></app-header>
     <div class="row background">
         <div class="col-sm-12">
