captcha disabled on login api

--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -47,9 +47,9 @@
         Password must be more than seven characters long.
       </mat-error> -->
       <br>
-      <div style="transform:scale(0.75); transform-origin:0 0; margin-left: 23%;">
+      <!-- <div style="transform:scale(0.75); transform-origin:0 0; margin-left: 23%;">
           <re-captcha (resolved)="resolved($event)" [siteKey]="siteKey"></re-captcha>
-      </div>
+      </div> -->
     
       <button class="btn btn-color cc1" [disabled]="!f.valid" (click)="login()">  Login <i *ngIf="loading" class="fa fa-spinner fa-spin colob"></i></button>
 <div class="row">
