pcap file not found

--- a/front-end/src/app/modules/dashboard/hader-components/repositories/p-cap-binary/p-cap-binary.component.scss
+++ b/front-end/src/app/modules/dashboard/hader-components/repositories/p-cap-binary/p-cap-binary.component.scss
@@ -75,7 +75,7 @@ i {
 
 .table th {
     color: #000000;
-    background-color: black;
+    // background-color: black;
     border: none;
     padding-bottom: 20px;
     vertical-align: middle;
