--- a/front-end/src/app/modules/dashboard/hader-components/repositories/p-cap-binary/p-cap-binary.component.html
+++ b/front-end/src/app/modules/dashboard/hader-components/repositories/p-cap-binary/p-cap-binary.component.html
@@ -40,10 +40,24 @@
                                         class="mat-datepicker-t"></mat-datepicker-toggle>
                                     <mat-datepicker #picker2></mat-datepicker>
                                 </div>
+                                
+                            </div>
+                            
+                        </div>
+                        <div class="col-md-2">
+                            <div class="form-group" style="margin-left: 3em;">
+                                <label for="node"></label>
+                               <button  class="form-control h37" (click)="getAllBinary()">Binary Download</button> 
                             </div>
                         </div>
+                         <!-- <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="node"></label>
+                               <button  class="form-control h37" (click)="getSnortData()">Snort Analysis</button>
+                            </div>
+                        </div> -->
 
-                        <div class="col-md-4">
+                        <!-- <div class="col-md-4">
                             <div class="form-group">
                                 <label for="node">Select Binary ID <i *ngIf="this.searchloaderxs"
                                         class="fa fa-spinner fa-spin sml"></i></label>
@@ -54,7 +68,7 @@
 
                                 </select>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                 </form>
@@ -69,7 +83,54 @@
             </div>
         </div>
     </div>
-    <!-- <div class="background table-div" [hidden]="this.showSnort">
+    <div class="background table-div" [hidden]="this.showBinary">
+    <mat-paginator #paginatorBinary="matPaginator" [pageSizeOptions]="[10, 25, 50, 100]" 
+    aria-label="Select page of users" showFirstLastButtons>
+</mat-paginator>
+    <table mat-table [dataSource]="dataSourceBinary" #sortBinary="matSort" matSort class="table-striped table" >
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef class="tab-header">
+                <div class="row">
+                    <div class="col-12 hed"># </div>
+                    <div class="col-12 hed1"></div>
+                </div>
+            </th>
+            <td mat-cell *matCellDef="let row; let i = index;">{{i+1}} </td>
+        </ng-container>
+        <ng-container matColumnDef="key">
+            <th mat-header-cell *matHeaderCellDef class="tab-header">
+                <div class="row">
+                    <div class="col-12 hed" mat-sort-header>Binary IDs</div>
+                    <div class="col-12 hed1">
+                        <mat-form-field class="filter" floatLabel="never">
+                            <mat-label>Search</mat-label>
+                            <input matInput [formControl]="binFilter">
+                        </mat-form-field>
+                    </div>
+                </div>
+            </th>
+            <td mat-cell *matCellDef="let row;">{{row.key}} </td>
+        </ng-container>
+        <ng-container matColumnDef="download">
+            <th mat-header-cell *matHeaderCellDef class="tab-header">
+                <div class="row">
+                    <div class="col-12 hed">Download PCAP</div>
+                    <div class="col-12 hed1"></div>
+                </div>
+            </th>
+            <td mat-cell *matCellDef="let row;"><button class="evt"  (click)="getBinaryPcap(row)"><i class="fa fa-file-pdf-o"></i> Download</button></td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsBinary"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsBinary;"></tr>
+
+        <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="3">No data found</td>
+        </tr>
+    </table>
+    </div>
+
+    <div class="background table-div" [hidden]="this.showSnort">
+        <h2>Snort Analysis</h2>
         <mat-paginator #paginatorEvent="matPaginator" [pageSizeOptions]="[10, 25, 50, 100]" 
         aria-label="Select page of users" showFirstLastButtons>
     </mat-paginator>
@@ -220,13 +281,11 @@
                 </th>
                 <td mat-cell *matCellDef="let row;">{{row._source.event_data.protocol }} </td>
             </ng-container>
-
-           
-
+      
             <ng-container matColumnDef="download">
                 <th mat-header-cell *matHeaderCellDef class="tab-header">
                     <div class="row">
-                        <div class="col-12 hed">Download</div>
+                        <div class="col-12 hed">Download PCAP</div>
                         <div class="col-12 hed1"></div>
                     </div>
                 </th>
@@ -240,6 +299,6 @@
                 <td class="mat-cell" colspan="13">No data found</td>
             </tr>
         </table>
-    </div> -->
+    </div>
 
 </section>
