pcap download button alignmnet

--- a/front-end/src/app/modules/dashboard/hader-components/repositories/p-cap-binary/p-cap-binary.component.html
+++ b/front-end/src/app/modules/dashboard/hader-components/repositories/p-cap-binary/p-cap-binary.component.html
@@ -44,9 +44,10 @@
                             </div>
                             
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-2" style="align-self: flex-end;">
                             <div class="form-group" style="margin-left: 3em;">
                                 <label for="node"></label>
+                                
                                <button  class="form-control h37" (click)="getAllBinary()">Binary Download</button> 
                             </div>
                         </div>
